syntax = "proto2";

package FluffyVmFormat.Bytecode;

message Constant {
  oneof data {
    bytes data_str = 2;
    sint64 data_longNum = 3;
    double data_doubleNum = 4;
  }
}

message LineInfo {
  required string sourceFile = 1;
  required int32 startColumn = 2;
  required int32 startLine = 3;
  required int32 endColumn = 4;
  required int32 endLine = 5;
}

message Prototype {
  required uint64 instructions = 1;
  repeated Prototype prototypes = 2;

  // Valid name is `[A-Za-z][A-Za-z]*`
  required string symbolName = 3;
  
  optional LineInfo definedAt = 4;
  repeated LineInfo pcToLine = 5;
}

message Bytecode {
  required uint32 version = 1;
  repeated Constant constants = 2;
  required Prototype mainPrototype = 3;
}







